--- a/_includes/navlinks.html
+++ b/_includes/navlinks.html
@@ -5,6 +5,18 @@
     <div class="post_navi-arrow">&lt;</div><div class="post_navi-label">Previous Post</div><div><span>{{ page.previous.title }}</span></div>
   </a>
   {%- else -%}
+  <a class="post_navi-item nav_prev" href="{{ 'archive.html' | absolute_url }}" title="Programming">
+    <div class="post_navi-arrow">&lt;</div><div class="post_navi-label">Programming</div><div><span>Programming1</span></div>
+  </a>
+  <a class="post_navi-item nav_prev" href="{{ 'archive.html' | absolute_url }}" title="Gaming">
+    <div class="post_navi-arrow">&lt;</div><div class="post_navi-label">Gaming</div><div><span>Gaming2</span></div>
+  </a>
+  <a class="post_navi-item nav_prev" href="{{ 'archive.html' | absolute_url }}" title="Movies/Shows">
+    <div class="post_navi-arrow">&lt;</div><div class="post_navi-label">Movies/Shows</div><div><span>Archive of all previous blog posts</span></div>
+  </a>
+  <a class="post_navi-item nav_prev" href="{{ 'archive.html' | absolute_url }}" title="Books">
+    <div class="post_navi-arrow">&lt;</div><div class="post_navi-label">Books</div><div><span>Archive of all previous blog posts</span></div>
+  </a>
   <a class="post_navi-item nav_prev" href="{{ 'archive.html' | absolute_url }}" title="Blog Archive">
     <div class="post_navi-arrow">&lt;</div><div class="post_navi-label">Blog Archive</div><div><span>Archive of all previous blog posts</span></div>
   </a>
